[gd_scene load_steps=19 format=3 uid="uid://dfl5k28pucu0f"]

[ext_resource type="Texture2D" uid="uid://bexnaaj7jnpep" path="res://assets/player2/spr_shadow.png" id="1_4fy4y"]
[ext_resource type="Script" path="res://scripts/nightborne.gd" id="1_e5qku"]
[ext_resource type="Texture2D" uid="uid://cnkewheesexjs" path="res://assets/NightBorne/NightBorne.png" id="2_31i2r"]
[ext_resource type="PackedScene" uid="uid://c2ruf735lsivq" path="res://scenes/healthbar.tscn" id="3_3fijx"]
[ext_resource type="Texture2D" uid="uid://julbulhtyo4p" path="res://assets/lightning/Lightning_1_512-sheet.png" id="4_vrgwt"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_yond6"]
radius = 8.0
height = 26.0

[sub_resource type="GDScript" id="GDScript_gth0l"]
script/source = "extends Hitbox
"

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_q5djt"]
radius = 6.0
height = 20.0

[sub_resource type="Animation" id="Animation_skfa8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame_coords")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 2)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D/Hitbox/CollisionPolygon2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_5vym8"]
resource_name = "attack"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.0666667, 0.1, 0.133333, 0.166667, 0.2, 0.233333, 0.266667, 0.349155, 0.405051, 0.462559),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 2), Vector2i(1, 2), Vector2i(2, 2), Vector2i(3, 2), Vector2i(4, 2), Vector2i(5, 2), Vector2i(6, 2), Vector2i(7, 2), Vector2i(8, 2), Vector2i(9, 2), Vector2i(10, 2), Vector2i(11, 2)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D/Hitbox/CollisionPolygon2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.35053, 0.407743),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_kinmf"]
resource_name = "death"
length = 1.15
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7, 0.75, 0.8, 0.85, 0.9, 0.95, 1, 1.05, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [92, 93, 94, 95, 96, 97, 98, 99, 100, 101, 102, 103, 104, 105, 106, 107, 108, 109, 110, 111, 112, 113, 114]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D/Hitbox/CollisionPolygon2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_muj7a"]
resource_name = "hit"
length = 0.250005
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 3), Vector2i(1, 3), Vector2i(2, 3), Vector2i(3, 3), Vector2i(4, 3)]
}

[sub_resource type="Animation" id="Animation_6mmqc"]
resource_name = "idle"
length = 0.90001
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D/Hitbox/CollisionPolygon2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_m6jky"]
resource_name = "walk"
length = 0.500008
loop_mode = 1
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D/Hitbox/CollisionPolygon2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame_coords")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0833333, 0.166667, 0.25, 0.333333, 0.416667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 1), Vector2i(1, 1), Vector2i(2, 1), Vector2i(3, 1), Vector2i(4, 1), Vector2i(5, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_l63q8"]
_data = {
"RESET": SubResource("Animation_skfa8"),
"attack": SubResource("Animation_5vym8"),
"death": SubResource("Animation_kinmf"),
"hit": SubResource("Animation_muj7a"),
"idle": SubResource("Animation_6mmqc"),
"walk": SubResource("Animation_m6jky")
}

[sub_resource type="Animation" id="Animation_ejnoc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_1vrml"]
resource_name = "default"
step = 0.111111
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.111111, 0.222222, 0.333333, 0.444444, 0.555556, 0.666667, 0.777778, 0.888889),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_02iuy"]
_data = {
"RESET": SubResource("Animation_ejnoc"),
"default": SubResource("Animation_1vrml")
}

[node name="nightborne" type="CharacterBody2D"]
collision_layer = 16
collision_mask = 19
script = ExtResource("1_e5qku")
max_health = 75.0

[node name="SprShadow" type="Sprite2D" parent="."]
position = Vector2(0, 13)
scale = Vector2(2, 2)
texture = ExtResource("1_4fy4y")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-2, -8)
texture = ExtResource("2_31i2r")
hframes = 23
vframes = 5
frame = 46

[node name="hurtbox" type="Area2D" parent="Sprite2D"]
visible = false
position = Vector2(2, 8)
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D/hurtbox"]
position = Vector2(0, 4)
shape = SubResource("CapsuleShape2D_yond6")

[node name="Hitbox" type="Area2D" parent="Sprite2D" node_paths=PackedStringArray("hitbox_owner")]
position = Vector2(2, 8)
collision_layer = 8
collision_mask = 0
script = SubResource("GDScript_gth0l")
damage_power = 1.0
hitbox_owner = NodePath("../..")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Sprite2D/Hitbox"]
polygon = PackedVector2Array(0, 22, 20, 22, 34, 13, 37, 4, 37, -16, 31, -24, -1, -41)
disabled = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 5)
shape = SubResource("CapsuleShape2D_q5djt")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_l63q8")
}

[node name="healthbar" parent="." instance=ExtResource("3_3fijx")]
z_index = 2
offset_left = -16.0
offset_top = -17.0
offset_right = 48.0
offset_bottom = -12.0
scale = Vector2(0.5, 0.5)

[node name="debug" type="Label" parent="."]
visible = false
offset_left = -12.0
offset_top = -29.0
offset_right = 28.0
offset_bottom = -6.0
theme_override_font_sizes/font_size = 8
text = "debug"

[node name="misc" type="Node2D" parent="."]
position = Vector2(0, 15)

[node name="damage_label" type="Marker2D" parent="misc"]
visible = false
position = Vector2(-4, -41)

[node name="shock_timer" type="Timer" parent="misc"]
wait_time = 0.1

[node name="lightning" type="Sprite2D" parent="misc"]
visible = false
modulate = Color(0.980392, 0.901961, 0.388235, 1)
position = Vector2(0, -29)
scale = Vector2(0.15, 0.15)
texture = ExtResource("4_vrgwt")
hframes = 3
vframes = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="misc/lightning"]
libraries = {
"": SubResource("AnimationLibrary_02iuy")
}
speed_scale = 2.0

[connection signal="area_entered" from="Sprite2D/hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="timeout" from="misc/shock_timer" to="." method="_on_shock_timer_timeout"]
